--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
   <p><a href = "https://unsplash.com/photos/v3-zcCWMjgM">Photo</a> taken by James Barker.</p>
 </article>
 <footer>
-  <p><a href = "cinodona.com">Here</a> is a link to my website.</p>
-</footer>
+<p><a href = "https://github.com/Alcinooo/Github_assignment_10">Here</a> is a link to my GitHub.</p></footer>
 </section>
 
 <script src="jss/javascript10.js"></script>
