--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 <p><a href = "https://github.com/Alcinooo/Github_assignment_10">Here</a> is a link to my GitHub.</p></footer>
 </section>
 
-<script src="jss/javascript10.js"></script>
+<script src="js/javascript10.js"></script>
   </body>
   </html>
